examples/errors/parsing/case-no-of.cn
main : () [impure] =
  case 5 { x -> x }
